# sc-scatter-shiny

./: .gitignore  README.md  app.py  app_improved.py  jscatter_soma_analysis.py  pyproject.toml  requirements.txt
data/3prime_PBMC_test_soma/ms/RNA/__group/: __1750165587154_1750165587154_6aab06d682eccc06790b5e150e05e3ab_2
data/3prime_PBMC_test_soma/ms/RNA/obsm/__group/: __1750165709302_1750165709302_0ce438303b88d71d24f8eb53f9069974_2
data/3prime_PBMC_test_soma/ms/RNA/uns/__group/: __1750165587203_1750165587203_11291b286e7539f8bc7f4a0cc6530f1a_2
data/3prime_PBMC_test_soma/ms/RNA/var/__schema/: __1750165589764_1750165589764_3d25a0d2d7e7c2e1ece303cd1d65a8d3  __1750165589970_1750165589970_3bbf432d7c9ae078998e89ec156fb38d
data/3prime_PBMC_test_soma/ms/RNA/var/__schema/__enumerations/: __3d25a0d041bb708a1b022882b79b4b24_0  (+3 more)
data/3prime_PBMC_test_soma/obs/__fragments/__1750165584859_1750165584859_7a73cb56291af92401eaf473d10c17c8_22/: __fragment_metadata.tdb  a0.tdb  a0_var.tdb  a1.tdb  a10.tdb  a11.tdb  a12.tdb  a13.tdb  a14.tdb  a16.tdb  a16_validity.tdb  a17.tdb  a18.tdb  a19.tdb  a2.tdb  a20.tdb  a21.tdb  a4.tdb  a5.tdb  a6.tdb  a7.tdb  a8.tdb  a9.tdb  d0.tdb
data/3prime_PBMC_test_soma/obs/__schema/: __1750165584774_1750165584774_347ba57ef244f935c7639e6dbac15557  __1750165585075_1750165585075_75a89503c1ed74c221d45a92f8da0602
data/3prime_PBMC_test_soma/obs/__schema/__enumerations/: __31492268fb5d60d65a31d374022fc90d_0  __31492269539a74c55875b807efee67b2_0  __347ba57c35d0da83e21326df1f1762cc_0  __347ba57dba9ecc5a89773e042d604d66_0
script/: convert_h5ad_soma.py
(+68 files in other folders)
